--- a/src/index.css
+++ b/src/index.css
@@ -2,22 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap"); */
-
 html {
-  font-size: 16px;
-}
+  font-size: 12px;
 
+}
 .wrapper {
   position: relative;
-  max-width: 1200px;
+  max-width: 800px;
   margin: 0 auto;
   padding-top: 6em;
   font-family: "Poppins", sans-serif;
   background: #ffffff;
   padding: 3em;
-  padding-top: 5em;
-  margin-top: 6em;
+  
+  margin-top: 2em;
   box-shadow: 0px 4px 14px 2px rgba(0, 0, 0, 0.1);
 }
 
@@ -33,9 +31,7 @@ html {
   height: 1.5em;
 }
 
-.form {
-  padding-right: 3em;
-}
+
 
 .form-header {
   display: flex;
@@ -84,178 +80,10 @@ html {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  border-radius: 4px;
+  border-radius: 2px;
   margin-left: -4px;
 }
 
-.form-header .timer-divider {
-  position: relative;
-  right: 2px;
-}
-
-.form-body form .input-group {
-  margin-bottom: 2em;
-}
-
-.form-body form .input-group .header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: initial;
-  margin-bottom: 1.8em;
-}
-
-.form-body form .input-group .header .description .title {
-  text-transform: capitalize;
-  font-size: 1.1em;
-  font-weight: 700;
-  color: #05365c;
-  margin-bottom: 0.4em;
-}
-
-.form-body form .input-group .header .description .desc {
-  font-size: 0.77em;
-  font-weight: 500;
-  color: #8e96a3;
-}
-
-.form-body form .input-group .header button.edit {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: initial;
-  color: #1da1f2;
-}
-
-.form-body form .input-group .header button.edit svg {
-  height: 0.9em;
-  fill: #1da1f2;
-}
-
-.form-body form .input-group .header button.edit .btn-desc {
-  display: block;
-  margin-left: 0.6em;
-  font-weight: 500;
-}
-
-.form-body form .input-group .main {
-  position: relative;
-  margin-top: 1em;
-}
-
-.form-body form .input-group .main img {
-  position: absolute;
-}
-
-.form-body form .input-group .main img.leading-icon {
-  left: 0;
-  height: 2em;
-  top: 50%;
-  transform: translate(0, -50%);
-  left: 1.2em;
-}
-
-.form-body form .input-group .main img.trailing-icon {
-  right: 0;
-  height: 1.5em;
-  top: 50%;
-  transform: translate(0, -50%);
-  right: 1.5em;
-}
-
-.form-body form .input-group .main input {
-  border: 2px solid rgba(224, 224, 224, 0.5);
-  width: 100%;
-  padding: 1em 4em 1em 4em;
-  font-size: 1.2em;
-  font-weight: 600;
-  border-radius: 6px;
-  background: linear-gradient(45deg, #f5f8ff, transparent);
-  color: #05365c;
-}
-
-.form-body form .input-group .main input:focus {
-  outline-color: #0077B6;
-}
-
-.form-body form .input-group .main input::placeholder {
-  font-weight: 400;
-  opacity: 0.5;
-}
-
-.form-body form .input-group.__col {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: initial;
-}
-
-.form-body form .input-group.__col .grp {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-direction: initial;
-  width: 400px;
-  position: relative;
-}
-
-.form-body form .input-group.__col .grp .divider {
-  display: block;
-  font-size: 1.5em;
-  font-weight: 500;
-  color: #05365c;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, 0);
-}
-
-.form-body form .input-group.__col .main {
-  margin-top: 0;
-  width: 400px;
-}
-
-.form-body form .input-group.__col .main input {
-  padding-right: 0;
-  padding-left: 0;
-  text-align: center;
-  background: none;
-}
-
-.form-body form .input-group.__col .main input:focus {
-  background: rgba(0, 119, 182, 0.05);
-}
-
-.form-body form .input-group.__col .main input[type=password] {
-  text-align: left;
-  padding-left: 1.5em;
-  letter-spacing: 0.3em;
-}
-
-.form-body form .input-group.__col .main .trailing-icon {
-  opacity: 0.35;
-}
-
-.form-body form .input-group.__col .main.__date {
-  width: 42%;
-}
-
-.form-body form .btn-submit {
-  background-color: #035fff;
-  width: 100%;
-  padding: 1.2em 0;
-  margin-top: 0.75em;
-  box-sizing: border-box;
-  color: #fff;
-  text-transform: capitalize;
-  font-size: 1.2em;
-  font-weight: 500;
-  border-radius: 0.6em;
-  transition: all 250ms ease-in-out;
-}
-
-.form-body form .btn-submit:hover {
-  background-color: #1254d6;
-}
 
 .checkout {
   position: relative;
@@ -399,6 +227,9 @@ html {
   bottom: 0;
 }
 
+
+
+
 .checkout .checkout-details .purchase-data {
   position: relative;
   top: 15.5em;
@@ -413,11 +244,11 @@ html {
   text-transform: capitalize;
   font-size: 1em;
   color: #8e96a3;
-  margin-bottom: 1.2em;
+  margin-bottom: 0.6em;
 }
 
 .checkout .checkout-details .purchase-data .data .title {
-  font-size: 0.85em;
+  font-size: 0.80em;
   font-weight: 500;
 }
 
@@ -435,14 +266,14 @@ html {
 .checkout .checkout-details .purchase-data .data .value .inner-text {
   color: #05365c;
   font-weight: 600;
-  margin-left: 0.6em;
+  margin-left: 0.4em;
 }
 
 .checkout .checkout-details .divider {
   position: absolute;
   bottom: 7.4em;
   width: 100%;
-  border: 4px dashed #cbcbcb;
+  border: 1px dashed #cbcbcb;
   display: flex;
   align-items: center;
 }
@@ -525,15 +356,48 @@ html {
   height: 1.6em;
 }
 
+@media (max-width: 400px) {
+  .wrapper {
+    box-shadow: none;
+    margin-top: 1em;
+    padding: 1.5em
+  };
+  .form-header {
+    display: flex;
+    flex-direction: column;
+  }
+
+ .checkout {
+   position: relative;
+   height: 45rem;
+   width: 100%;
+   margin-top: 4em;
+  
+ }
+ .wrapper .close-btn {
+   position: absolute;
+   z-index: 99;
+   top: -4px;
+   right: -3px;
+   cursor: pointer;
+ }
+
+}
+
+
+ @media (min-width: 400px) and (max-width: 765px) {
+  .checkout {
+      position: relative;
+      height: 43rem;
+      width: 100%;
+      margin-top: 4em;
+  
+    }
+ }
 
 
 
 
-
-
-
-
-/*# sourceMappingURL=main.css.map */
 
 
 
